--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
+
 * {
   font-family: "Rubik", sans-serif;
 }
@@ -70,6 +71,16 @@
   font-weight: bold;
   border-radius: 28px;
   padding: 16px 20px;
+  border: none;
+}
+
+.check-btn {
+  background-color: #f6c90e;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 28px;
+  width: 40px;
+  height: 40px;
   border: none;
 }
 
