--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
 }
 
 .card-content {
+  margin-top: -60px;
+}
+
+.card-content-cart {
   margin-top: -20px;
 }
 
@@ -38,14 +42,17 @@
   left: -18px;
 }
 
-.product-item,
+.product-item {
+  margin: 80px 0;
+}
+
 .cart-item {
   margin: 40px 0;
 }
 
 .product-img-wrapper {
   border-radius: 28px;
-  height: 372px;
+  height: 370px;
 }
 
 .product-img {
@@ -85,7 +92,8 @@
   text-transform: uppercase;
   font-weight: bold;
   border-radius: 28px;
-  width: 32px;
+  width: 28px;
+  height: 28px;
   border: none;
 }
 
@@ -109,7 +117,7 @@
 }
 
 .card-header {
-  padding: 2px 4px;
+  padding: 4px 6px;
   border-radius: 28px !important;
   background-color: #f6c90e;
 }
